config/kubernetes/demo/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: peoplefinder
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: peoplefinder
  template:
    metadata:
      labels:
        app: peoplefinder
    spec:
      containers:
        - name: webapp
          imagePullPolicy: Always
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
          ports:
            - containerPort: 3000
          command: ["./run.sh"]
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
              initialDelaySeconds: 40
              periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3000
              httpHeaders:
                - name: X-Forwarded-Proto
                  value: https
                - name: X-Forwarded-Ssl
                  value: "on"
            initialDelaySeconds: 40
            periodSeconds: 60
        - name: jobs
          image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/peoplefinder/peoplefinder-ecr:latest
          ports:
            - containerPort: 3000
          command: ["./run.sh"]
          args: ["worker"]
